appId: ${APP_ID}
---
- launchApp
- extendedWaitUntil:
    visible: "React Native"
    timeout: 5000
- tapOn: "React Native"

- extendedWaitUntil:
    visible: "Throw JS Exception.*"
    timeout: 3000
- scrollUntilVisible:
    element:
      text: "Handled Exception.*"
- tapOn: "Handled Exception.*"

- pressKey: "Home"
