appId: ${APP_ID}
---
- launchApp
- extendedWaitUntil:
    visible: "React Native"
    timeout: 5000
- tapOn: "React Native"

- extendedWaitUntil:
    visible: "Throw JS Exception.*"
    timeout: 3000
- scrollUntilVisible:
    element:
      text: "Unhandled Promise Rejection.*"
- tapOn: "Unhandled Promise Rejection.*"

- extendedWaitUntil:
    visible:
      text: "__rejection_settle__"
    timeout: 5000
    optional: true

- pressKey: "Home"
